# llm_pricing_list

./: .gitignore  README.md  index.html  pyproject.toml  requirements.txt  scrape.py
.github/workflows/: scrape-pricing.yaml
data/: current_pricing.json  provider_icons.json  summary.json
scrapers/: base_scraper.py  claude_scraper.py  deepseek_scraper.py  doubao_scraper.py  forex.py  gemini_scraper.py  openai_scraper.py
