[project]
name = "llm-pricing"
version = "0.1.0"
description = "LLM pricing scraper and tracker across major AI providers"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31.0",
    "forex-python>=1.6",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "selenium>=4.15.0",
    "webdriver-manager>=4.0.0",
    "pandas>=2.1.0",
    "python-dateutil>=2.8.0",
]

